--- a/vercel.json
+++ b/vercel.json
@@ -1,45 +1,29 @@
 {
   "version": 2,
-  "builds": [
+  "rewrites": [
     {
-      "src": "**/*",
-      "use": "@vercel/static"
-    }
-  ],
-  "routes": [
-    {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
+      "source": "/static/(.*)",
+      "destination": "/static/$1"
     },
     {
-      "src": "/(.*\\.(png|jpg|jpeg|gif|ico|svg|webmanifest))",
-      "dest": "/$1"
+      "source": "/(.*\\.(png|jpg|jpeg|gif|ico|svg|webmanifest))",
+      "destination": "/$1"
     },
     {
-      "src": "/(.*\\.(mp3|wav|ogg))",
-      "dest": "/$1",
-      "headers": {
-        "Content-Type": "audio/mpeg",
-        "Accept-Ranges": "bytes"
-      }
+      "source": "/(.*\\.(mp3|wav|ogg))",
+      "destination": "/$1"
     },
     {
-      "src": "/(.*\\.(css|js))",
-      "dest": "/$1"
+      "source": "/(.*\\.(css|js))",
+      "destination": "/$1"
     },
     {
-      "src": "/(.*\\.txt)",
-      "dest": "/$1",
-      "headers": {
-        "Content-Type": "text/plain; charset=utf-8"
-      }
+      "source": "/(.*\\.txt)",
+      "destination": "/$1"
     },
     {
-      "src": "/site\\.webmanifest",
-      "dest": "/site.webmanifest",
-      "headers": {
-        "Content-Type": "application/manifest+json"
-      }
+      "source": "/site\\.webmanifest",
+      "destination": "/site.webmanifest"
     }
   ],
   "headers": [
@@ -67,6 +51,32 @@
         {
           "key": "Cache-Control",
           "value": "public, max-age=86400"
+        },
+        {
+          "key": "Content-Type",
+          "value": "audio/mpeg"
+        },
+        {
+          "key": "Accept-Ranges",
+          "value": "bytes"
+        }
+      ]
+    },
+    {
+      "source": "/(.*\\.txt)",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/plain; charset=utf-8"
+        }
+      ]
+    },
+    {
+      "source": "/site\\.webmanifest",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/manifest+json"
         }
       ]
     },
