--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "headers": [
     {
-      "source": "/static/(.*)",
+      "source": "/static/**",
       "headers": [
         {
           "key": "Cache-Control",
@@ -10,7 +10,7 @@
       ]
     },
     {
-      "source": "/(.*\\.(png|jpg|jpeg|gif|ico|svg|css|js|woff|woff2))",
+      "source": "/**/*.png",
       "headers": [
         {
           "key": "Cache-Control",
@@ -19,7 +19,70 @@
       ]
     },
     {
-      "source": "/(.*\\.(mp3|wav|ogg))",
+      "source": "/**/*.jpg",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/**/*.jpeg",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/**/*.gif",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/**/*.ico",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/**/*.svg",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/**/*.css",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/**/*.js",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    },
+    {
+      "source": "/**/*.mp3",
       "headers": [
         {
           "key": "Cache-Control",
@@ -36,7 +99,41 @@
       ]
     },
     {
-      "source": "/(.*\\.txt)",
+      "source": "/**/*.wav",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=86400"
+        },
+        {
+          "key": "Content-Type",
+          "value": "audio/wav"
+        },
+        {
+          "key": "Accept-Ranges",
+          "value": "bytes"
+        }
+      ]
+    },
+    {
+      "source": "/**/*.ogg",
+      "headers": [
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=86400"
+        },
+        {
+          "key": "Content-Type",
+          "value": "audio/ogg"
+        },
+        {
+          "key": "Accept-Ranges",
+          "value": "bytes"
+        }
+      ]
+    },
+    {
+      "source": "/**/*.txt",
       "headers": [
         {
           "key": "Content-Type",
@@ -45,7 +142,7 @@
       ]
     },
     {
-      "source": "/site\\.webmanifest",
+      "source": "/site.webmanifest",
       "headers": [
         {
           "key": "Content-Type",
@@ -54,7 +151,7 @@
       ]
     },
     {
-      "source": "/(.*\\.html)",
+      "source": "/**/*.html",
       "headers": [
         {
           "key": "Cache-Control",
@@ -67,7 +164,7 @@
       ]
     },
     {
-      "source": "/(.*)",
+      "source": "/**",
       "headers": [
         {
           "key": "X-Content-Type-Options",
